refactor code to be consistent with google java style guide